[package]
name = "rustsam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.0"

[dev-dependencies]
memmap = "0.7.0"
rodio = { version = "0.16.0", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
