[package]
name = "testtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
ctrlc = { version = "3.2.4", features = ["termination"] }
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
indicatif = { version = "0.17.2", features = ["rayon"] }
memmap2 = "0.5.8"
parking_lot = "0.12.1"
rayon = "1.6.1"
rustsam = { version = "0.1.0", path = ".." }
serde = { version = "1.0.149", features = ["derive"] }
serde_bytes = "0.11.8"
serde_json = "1.0.89"
ureq = { version = "2.5.0", features = ["json"] }
